e2e/tests/cli/snapshots/test_cli__cli__read_skip_names_travel_peekaboo.snap
---
source: e2e/tests/cli.rs
expression: json
---
{
  "beetle": {
    "dyes": [
      {
        "id": 1352
      },
      {
        "id": 1310
      },
      {
        "id": 1250
      },
      {
        "id": 1250
      }
    ],
    "id": 743,
    "visible": true
  },
  "doorway": {
    "dyes": [
      {
        "id": 1310
      },
      {
        "id": 1250
      },
      {
        "id": 1250
      },
      {
        "id": 1250
      }
    ],
    "id": 5,
    "visible": true
  },
  "glider": {
    "dyes": [
      {
        "id": 6
      },
      {
        "id": 1250
      },
      {
        "id": 1250
      },
      {
        "id": 1310
      }
    ],
    "id": 144,
    "visible": true
  },
  "griffon": {
    "dyes": [
      {
        "id": 6
      },
      {
        "id": 1310
      },
      {
        "id": 1352
      },
      {
        "id": 1250
      }
    ],
    "id": 330,
    "visible": true
  },
  "jackal": {
    "dyes": [
      {
        "id": 1310
      },
      {
        "id": 1250
      },
      {
        "id": 1310
      },
      {
        "id": 1250
      }
    ],
    "id": 622,
    "visible": true
  },
  "raptor": {
    "dyes": [
      {
        "id": 6
      },
      {
        "id": 1310
      },
      {
        "id": 1250
      },
      {
        "id": 1352
      }
    ],
    "id": 403,
    "visible": true
  },
  "skiff": {
    "dyes": [
      {
        "id": 1310
      },
      {
        "id": 1250
      },
      {
        "id": 1310
      },
      {
        "id": 1250
      }
    ],
    "id": 451,
    "visible": true
  },
  "skimmer": {
    "dyes": [
      {
        "id": 1250
      },
      {
        "id": 1250
      },
      {
        "id": 1310
      },
      {
        "id": 1352
      }
    ],
    "id": 804,
    "visible": true
  },
  "skyscale": {
    "dyes": [
      {
        "id": 1250
      },
      {
        "id": 6
      },
      {
        "id": 6
      },
      {
        "id": 351
      }
    ],
    "id": 624,
    "visible": true
  },
  "springer": {
    "dyes": [
      {
        "id": 1250
      },
      {
        "id": 1310
      },
      {
        "id": 1352
      },
      {
        "id": 1310
      }
    ],
    "id": 499,
    "visible": true
  },
  "turtle": {
    "dyes": [
      {
        "id": 1310
      },
      {
        "id": 1250
      },
      {
        "id": 1352
      },
      {
        "id": 1310
      }
    ],
    "id": 504,
    "visible": true
  },
  "warclaw": {
    "dyes": [
      {
        "id": 6
      },
      {
        "id": 1310
      },
      {
        "id": 1250
      },
      {
        "id": 1352
      }
    ],
    "id": 712,
    "visible": true
  }
}
