e2e/tests/cli/snapshots/test_cli__cli__read_skip_names_travel_zizi.snap
---
source: e2e/tests/cli.rs
expression: json
---
{
  "beetle": {
    "dyes": [
      {
        "id": 1304
      },
      {
        "id": 1553
      },
      {
        "id": 1304
      },
      {
        "id": 473
      }
    ],
    "id": 743,
    "visible": true
  },
  "doorway": {
    "dyes": [
      {
        "id": 126
      },
      {
        "id": 131
      },
      {
        "id": 1304
      },
      {
        "id": 641
      }
    ],
    "id": 5,
    "visible": true
  },
  "glider": {
    "dyes": [
      {
        "id": 1304
      },
      {
        "id": 1304
      },
      {
        "id": 1553
      },
      {
        "id": 1553
      }
    ],
    "id": 153,
    "visible": true
  },
  "griffon": {
    "dyes": [
      {
        "id": 1553
      },
      {
        "id": 1304
      },
      {
        "id": 1304
      },
      {
        "id": 1304
      }
    ],
    "id": 330,
    "visible": true
  },
  "jackal": {
    "dyes": [
      {
        "id": 443
      },
      {
        "id": 1304
      },
      {
        "id": 1304
      },
      {
        "id": 1304
      }
    ],
    "id": 622,
    "visible": true
  },
  "raptor": {
    "dyes": [
      {
        "id": 1553
      },
      {
        "id": 1304
      },
      {
        "id": 680
      },
      {
        "id": 1549
      }
    ],
    "id": 403,
    "visible": true
  },
  "skiff": {
    "dyes": [
      {
        "id": 1553
      },
      {
        "id": 1304
      },
      {
        "id": 1304
      },
      {
        "id": 1553
      }
    ],
    "id": 413,
    "visible": true
  },
  "skimmer": {
    "dyes": [
      {
        "id": 1553
      },
      {
        "id": 1304
      },
      {
        "id": 126
      },
      {
        "id": 126
      }
    ],
    "id": 804,
    "visible": true
  },
  "skyscale": {
    "dyes": [
      {
        "id": 1304
      },
      {
        "id": 1553
      },
      {
        "id": 1553
      },
      {
        "id": 1304
      }
    ],
    "id": 624,
    "visible": true
  },
  "springer": {
    "dyes": [
      {
        "id": 1304
      },
      {
        "id": 1553
      },
      {
        "id": 1304
      },
      {
        "id": 1304
      }
    ],
    "id": 499,
    "visible": true
  },
  "turtle": {
    "dyes": [
      {
        "id": 1553
      },
      {
        "id": 1304
      },
      {
        "id": 1304
      },
      {
        "id": 1553
      }
    ],
    "id": 504,
    "visible": true
  },
  "warclaw": {
    "dyes": [
      {
        "id": 1553
      },
      {
        "id": 1304
      },
      {
        "id": 680
      },
      {
        "id": 126
      }
    ],
    "id": 712,
    "visible": true
  }
}
